[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cz_ai"
version = "0.1.0"
description = "description for the cz"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = ["commitizen"]

[project.entry-points."commitizen.plugin"]
cz_ai = "cz_cz_ai:Cz_aiCz"

[tool.setuptools]
py-modules = ["cz_cz_ai"]
include-package-data = true
license-files = []
