[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cz_ai"
version = "0.4.0"
description = "A Commitizen plugin that leverages OpenAI's GPT-4o to automatically generate clear, concise, and conventional commit messages based on your staged git changes."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = ["commitizen"]

[project.entry-points."commitizen.plugin"]
cz_ai = "cz_cz_ai:Cz_aiCz"

[tool.setuptools]
py-modules = ["cz_cz_ai"]
include-package-data = true
license-files = []
